# d2wishlist

./: .gitignore  CHANGELOG.md  README.md  destiny_manifest.py  fetch_post.sh  pyproject.toml  wishlist_creator.py  wishlist_validator.py
.github/workflows/: release.yaml
examples/: wishlist.txt  wishlist.yaml
old-parsers/: pandapaxxy.py  spacemonkey.py
src/d2wishlist/: __main__.py  dim_additional.py  manifest.py  models.py
src/d2wishlist/cli/: __init__.py  creator.py  validator.py
src/d2wishlist/formatter/: dim.py
wishlist/: models.py
