[project]
name = "d2wishlist"
version = "0.1.0"
description = "Tools for creating and validating DIM-format wishlists for Destiny 2 items"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
    "pydantic-yaml>=1.6.0",
    "typer>=0.21.1",
]

[project.scripts]
d2wishlist_creator = "d2wishlist.cli:app"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.ruff.lint]
select = ["I"]
